; ModuleID = '/home/carl/AnghaBench/curl/lib/extr_mime.c_match_header.c'
source_filename = "/home/carl/AnghaBench/curl/lib/extr_mime.c_match_header.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.curl_slist = type { i8* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (%struct.curl_slist*, i8*, i64)* @match_header to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @match_header(%struct.curl_slist* %0, i8* %1, i64 %2) #0 {
  %4 = alloca %struct.curl_slist*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i8*, align 8
  store %struct.curl_slist* %0, %struct.curl_slist** %4, align 8
  store i8* %1, i8** %5, align 8
  store i64 %2, i64* %6, align 8
  store i8* null, i8** %7, align 8
  %8 = load %struct.curl_slist*, %struct.curl_slist** %4, align 8
  %9 = getelementptr inbounds %struct.curl_slist, %struct.curl_slist* %8, i32 0, i32 0
  %10 = load i8*, i8** %9, align 8
  %11 = load i8*, i8** %5, align 8
  %12 = load i64, i64* %6, align 8
  %13 = call i64 @strncasecompare(i8* %10, i8* %11, i64 %12)
  %14 = icmp ne i64 %13, 0
  br i1 %14, label %15, label %41

15:                                               ; preds = %3
  %16 = load %struct.curl_slist*, %struct.curl_slist** %4, align 8
  %17 = getelementptr inbounds %struct.curl_slist, %struct.curl_slist* %16, i32 0, i32 0
  %18 = load i8*, i8** %17, align 8
  %19 = load i64, i64* %6, align 8
  %20 = getelementptr inbounds i8, i8* %18, i64 %19
  %21 = load i8, i8* %20, align 1
  %22 = sext i8 %21 to i32
  %23 = icmp eq i32 %22, 58
  br i1 %23, label %24, label %41

24:                                               ; preds = %15
  %25 = load %struct.curl_slist*, %struct.curl_slist** %4, align 8
  %26 = getelementptr inbounds %struct.curl_slist, %struct.curl_slist* %25, i32 0, i32 0
  %27 = load i8*, i8** %26, align 8
  %28 = load i64, i64* %6, align 8
  %29 = getelementptr inbounds i8, i8* %27, i64 %28
  %30 = getelementptr inbounds i8, i8* %29, i64 1
  store i8* %30, i8** %7, align 8
  br label %31

31:                                               ; preds = %37, %24
  %32 = load i8*, i8** %7, align 8
  %33 = load i8, i8* %32, align 1
  %34 = sext i8 %33 to i32
  %35 = icmp eq i32 %34, 32
  br i1 %35, label %36, label %40

36:                                               ; preds = %31
  br label %37

37:                                               ; preds = %36
  %38 = load i8*, i8** %7, align 8
  %39 = getelementptr inbounds i8, i8* %38, i32 1
  store i8* %39, i8** %7, align 8
  br label %31

40:                                               ; preds = %31
  br label %41

41:                                               ; preds = %40, %15, %3
  %42 = load i8*, i8** %7, align 8
  ret i8* %42
}

declare dso_local i64 @strncasecompare(i8*, i8*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
